# fab

./: Makefile  README  commands.html
src/: CMakeLists.txt
src/apps/: README  build.py
src/core/: CMakeLists.txt  array_direction.c  array_distances.c  array_edges.c  array_info.c  array_offset.c  array_png.c  array_slice.c  array_states_png.c  fab.c  fab.h  gif_info.c  gif_png.c  gif_stl.c  path_array.c  path_camm.c  path_epi.c  path_g.c  path_join.c  path_oms.c  path_ord.c  path_png.c  path_ps.c  path_rml.c  path_sbp.c  path_uni.c  png_distances.c  png_halftone.c  png_offset.c  png_path.c  png_scale.c  png_size.c  stl_info.c  stl_path.c  stl_png.c  svg_path.c  vol_gif.c
src/guis/: CMakeLists.txt  cad_ui  fab  fab.html  fabserver  kokopelli  make_cad_camm  make_cad_epi  make_cad_g  make_cad_png  make_cad_ps  make_cad_rml  make_cad_sbp  make_math_epi  make_math_g  make_math_ps  make_math_rml  make_math_sbp  make_png_Roland_SRM_20  make_png_camm  make_png_g  make_png_ps  make_png_ps_halftone  make_png_rml  make_png_sbp  make_stl_g  make_stl_rml  make_stl_sbp  make_svg_epi  make_svg_g  make_svg_rml  make_svg_sbp  rml_send_gui  rml_send_gui~
src/guis/koko/: __init__.py  about.py  app.py  canvas.py  cmd.py  dialogs.py  edit_panel.py  editor.py  evaluator.py  frame.py  globals.py  math_shape.py  point.py  shape_set.py  singletons.py  template.py  themes.py
src/guis/koko/lib/: math_string.py  shapes.py  text.py
src/guis/koko/primitives/: points.py  shapes2d.py  transforms.py
src/guis/koko/shapes/: __init__.py  core.py  evaluator.py  menu.py  pcb.py  points.py  shape_set.py  shapes2d.py  transforms.py
src/py/: CMakeLists.txt  cad_shapes.py  excellon_path.py  fab.py  fab_mods.py  fab_set.py  frame_fab.py  math_string.py  panel_cad_png.py  panel_cad_stl.py  panel_math_png.py  panel_path_Roland_SRM_20.py  panel_path_camm.py  panel_path_epi.py  panel_path_g.py  panel_path_ord.py  panel_path_ps.py  panel_path_rml.py  panel_path_sbp.py  panel_path_uni.py  panel_png.py  panel_png_path.py  panel_stl.py  panel_stl_png.py  panel_svg_path.py  simplify_svg.py  svg_path.py
src/scripts/: CMakeLists.txt  cad_math  eagle_png  fab_send  fab_update  rml_move
src/solver/: CMakeLists.txt  color_nodes.hpp  edgesolver.cpp  edgesolver.hpp  fab_interval.hpp  fabvars.cpp  fabvars.hpp  geometry.cpp  geometry.hpp  imagesolver.cpp  math_dot.cpp  math_png.cpp  math_stl.cpp  math_svg.cpp  math_tree.cpp  math_tree.hpp  node.cpp  node.hpp  numeric_nodes.cpp  numeric_nodes.hpp  opcodes.cpp  opcodes.hpp  parser.cpp  parser.hpp  progress_bar.cpp  progress_bar.hpp  region.cpp  region.hpp  solver.cpp  solver.hpp  switches.hpp  task_buffer.cpp  task_buffer.hpp  thread_manager.cpp  translator_nodes.hpp  trisolver.cpp  trisolver.hpp
